syntax = "proto3";

package dynamos;

import "google/protobuf/empty.proto";
option csharp_namespace = "Dynamos.Grpc";

// The sidecar definition.
service Generic {
    rpc InitTracer(ServiceName) returns (google.protobuf.Empty) {}
  }

message RequestMetadata {
    string correlation_id = 1;
    string destination_queue = 2;
    string job_name = 3;
    string return_address = 4;
    string job_id = 5;
}

message ServiceName {
    string service_name = 1;
}
